<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1C0545"
    android:orientation="vertical"
    tools:context=".login">

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="388dp"
        android:layout_height="52dp"
        android:backgroundTint="#E91E63"
        android:text="@string/btnEntrar"
        android:textColorHighlight="#CC1212"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.695"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.896" />

    <EditText
        android:id="@+id/txtNumero"
        android:layout_width="377dp"
        android:layout_height="49dp"
        android:layout_marginBottom="12dp"
        android:background="#A84242"
        android:backgroundTint="#66CAB6B6"
        android:ems="10"
        android:inputType="phone"
        android:paddingLeft="65dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btnEntrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtBy"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.924"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.962" />

    <TextView
        android:id="@+id/txtAyuda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtAyuda"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.962" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="60dp"
        android:layout_height="49dp"
        android:background="#A84242"
        android:backgroundTint="#66CAB6B6"
        android:ems="10"
        android:inputType="text"
        android:paddingLeft="12dp"
        android:text="+57"
        android:textColor="#E91E63"
        app:layout_constraintBottom_toBottomOf="@+id/txtNumero"
        app:layout_constraintEnd_toEndOf="@+id/txtNumero"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtNumero"
        app:layout_constraintTop_toTopOf="@+id/txtNumero" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="416dp"
        android:layout_height="544dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/fondobloqueo" />

</androidx.constraintlayout.widget.ConstraintLayout>